# doom-modernized

./: .gitignore  README.md
linuxdoom-1.10/: CMakeLists.txt  i_sound.c  i_video.c  i_video.c.bak  m_misc.c  r_data.c  r_draw.c
